# adeploy

./: .gitignore  .gitlab-ci.yml  DEVELOP.md  LICENSE  README.md  VERSION  mkdocs.yml  pyproject.toml  requirements.txt  runner.py  setup.py  version.py
adeploy/: main.py
adeploy/common/: __init__.py  args.py  colors.py  deployment.py  errors.py  exceptions.py  gopass.py  helpers.py  kubectl.py  logging.py  provider.py  secret.py  version.py
adeploy/common/jinja/: dict.py  env.py  filters.py  globals.py
adeploy/common/secrets/: __init__.py  docker_registry_secret.py  generic_secret.py  secret.py  tls_secret.py
adeploy/common/secrets_provider/: __init__.py  gopass_provider.py  plaintext_provider.py  provider.py  random_provider.py  shell_command_provider.py
adeploy/common/yaml/: __init__.py  find.py  labels.py  probes.py  resources.py  update.py
adeploy/providers/: __init__.py
adeploy/providers/helm/: README.md  (+5 more)
adeploy/steps/: __init__.py  config.py  deploy.py  render.py  test.py  watch.py
docs/: helm.cast  index.md  install.md  jinja.cast  usage.md
docs/assets/: download.sh
docs/common/: _more.md  filters.md  functions.md  includes.md  index.md  labels.md  macros.md  probes.md  resource-limits.md  secrets.md
docs/helm/: helm-deploy.cast  helm-render.cast  helm-test.cast  hooks.md  index.md
docs/hooks/: asciinema.py  badges.py
docs/jinja/: index.md  jinja-deploy.cast  jinja-render.cast  jinja-test.cast
examples/: .exclude-from-test  defaults.yml
examples/helm/: README.md  defaults.yml
examples/templates/: ingress.yml
lib/: main.py
lib/common/: __init__.py  exceptions.py  helpers.py
lib/steps/: build.py  render.py
version/: __init__.py
(+85 files in other folders)
